# hogwarts

./: CMakeLists.txt  README.md
docs/: README.md
examples/: README.md
include/: CMakeLists.txt
include/hogwarts/: CMakeLists.txt  README.md
include/hogwarts/sorting/: CMakeLists.txt  README.md  wizard.h
include/hogwarts/sorting/house/: CMakeLists.txt  README.md  attribute.h  gryffindor.h  house.h  slytherin.h
include/hogwarts/sorting/utils/: CMakeLists.txt  README.md  print_house.h
lib/: README.md
src/: CMakeLists.txt  README.md
src/sorting/: CMakeLists.txt
src/sorting/house/: CMakeLists.txt  README.md  attribute_p.h  gryffindor.cpp  slytherin.cpp
src/sorting/house/attribute_fields/: CMakeLists.txt  gryffindor_fields.h  slytherin_fields.h
src/sorting/utils/: CMakeLists.txt  README.md  print_house.cpp
tests/: README.md
